FIX: parsing uid to maker

--- a/react/dream-coding/react-basic/card-maker/src/components/editor/editor.module.css
+++ b/react/dream-coding/react-basic/card-maker/src/components/editor/editor.module.css
@@ -1,6 +1,7 @@
 @value makerGreen, makerLightGrey from "../../common/colors.css";
 
 .editor {
+    overflow-y: auto;
     flex-basis: 50%;
     border-right: 1px solid makerLightGrey;
     padding: 0.5em 2em;
